# fit_mesh_to_pointcloud

./: .gitignore  CMakeLists.txt  README.md
expts/: generate_hand_results.cpp  generate_sphere_results.cpp
fitting/: fitting_functor.cpp  fitting_functor.h
hand_fitting/: fit_hand.cpp  hand.h  mano.cpp  mano.h
mesh/: mesh.cpp  mesh.h
model/: model_base.h
sampling/: graph_filter.h
sphere_fitting/: fit_sphere.cpp  sphere.h
subdiv/: evaluator.cpp  evaluator.h
utility/: json_io.h  print.h  rotation.h  timer.h  visualizer.h
